force-app/main/default/objects/WarrantyTerm/fields/SVMXA360__AssetExpression__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__AssetExpression__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This relationship has the filters to qualify the Asset records on which Warranty is to be created using this Template.</description>
    <label>Asset Expression</label>
    <referenceTo>SVMXA360__CONF_Expression__c</referenceTo>
    <relationshipLabel>Warranty Terms</relationshipLabel>
    <relationshipName>Warranty_Terms</relationshipName>
    <type>Lookup</type>
</CustomField>