force-app/main/default/objects/WarrantyTerm/fields/SVMXA360__SupplierAccountId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SupplierAccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the supplier Account record.</description>
    <label>Supplier Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Warranty Terms</relationshipLabel>
    <relationshipName>Warranty_Terms</relationshipName>
    <type>Lookup</type>
</CustomField>