force-app/main/default/objects/WarrantyTerm/fields/SVMXA360__TravelCoveredDuration__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__TravelCoveredDuration__c</fullName>
    <description>The duration of Travel covered, in numbers.</description>
    <label>Travel Covered Duration</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>