force-app/main/default/objects/WarrantyTerm/fields/SVMXA360__TravelCoveredUnitOfTime__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__TravelCoveredUnitOfTime__c</fullName>
    <description>The date until when Travel discount is covered.</description>
    <label>Travel Covered Unit of Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SVMXA360__UnitOfTime</valueSetName>
    </valueSet>
</CustomField>